# 1milways

./: CMakeLists.txt  README.md
include/: Particles.h  Renderer.h  Shader.h
include/ICGenerator/: InitialValues.h
include/OdeSolver/: Euler.cuh  FIXCONSTANT.cuh  Methods.hpp  ODE.cuh  half4.cuh  methods.cuh
shaders/: shader.vert
src/: CMakeLists.txt  Particles.cpp  Renderer.cpp  Shader.cpp  main.cpp
src/ICGenerator/: GenratorKernels.cu  Initalvalues.cpp
src/OdeSolver/: CMakeLists.txt  CMakelists.txt  Euler.cu  Methods.cpp  newton.cu  test.cu
